fix(UI): more visible focus

--- a/src/features/game-board/ui/cell/cell.scss
+++ b/src/features/game-board/ui/cell/cell.scss
@@ -1,6 +1,7 @@
 .minesweeper-cell {
   --elevation-offset: 0;
   display: flex;
+  position: relative;
   width: 2rem;
   height: 2rem;
   border: 1px solid var(--ms-border);
@@ -29,6 +30,14 @@
     outline: none;
     transition-delay: 0s;
     box-shadow: 0 var(--ms-elevation-focus) 0 0 var(--ms-shadow);
+
+    &::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      animation: pulseAnimation 0.5s infinite;
+      box-shadow: 0 0 2px 0 var(--ms-border);
+    }
   }
 
   &.flagged {
@@ -74,6 +83,20 @@
   &.game-won {
     animation: msWinLift 0.25s ease-out;
     animation-delay: var(--win-wave-delay, 0s);
+  }
+}
+
+@keyframes pulseAnimation {
+  0% {
+    box-shadow: inset 0 0 0 0 var(--ms-border);
+  }
+
+  50% {
+    box-shadow: inset 0 0 0 2px var(--ms-border);
+  }
+
+  100% {
+    box-shadow: inset 0 0 0 0 var(--ms-border);
   }
 }
 
